--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@104corp/stylelint-config-104z",
+  "name": "stylelint-config-104z",
   "version": "1.0.0",
   "description": "A shareable stylelint config for 104z",
   "main": "index.js",
